Ajuste package.json

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://lucas-demarchii.github.io/PortfolioReactJS",
+  "homepage": "https://lucas-demarchi.github.io/PortfolioReactJS",
   "name": "portfolio_jp",
   "version": "0.1.0",
   "private": true,
